# gtest-usage

./: CMakeLists.txt
cmake/: gtestUsageConfig.cmake.in  pkg-config-template.pc.in
include/gtestUsage/: math_utils.h
src/: CMakeLists.txt  math_utils.cc
tests/: CMakeLists.txt  math_utils_test.cc
